# firecloud

./: .gitignore  PROJECT_REPORT.md  README.md  TODO.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
desktop/: package-lock.json  package.json  vite.config.ts
desktop/src/: app.css  app.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  config.rs  main.rs  state.rs
desktop/src/lib/: firebase.ts
mobile/: README.md  pubspec.yaml
mobile/android/: gradle.properties
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
mobile/test/: chunking_manifest_test.dart  encryption_test.dart  manifest_sync_service_test.dart  node_role_manager_test.dart  peer_info_test.dart  signaling_client_test.dart  widget_test.dart
mobile/windows/: CMakeLists.txt
scripts/: bootstrap.sh  build-desktop.sh  build-mobile.sh  run-api.sh  run-storage-node.sh  run-tui.sh  test.sh  verify-audit.sh  verify-signaling-gcloud.sh
signal-relay-prototype/: .dockerignore  .gcloudignore  Dockerfile  README.md  main.py  requirements.txt
src/firecloud/: __init__.py  api.py  audit_consensus.py  chunking.py  cli.py  compression.py  config.py  controller.py  crypto.py  discovery.py  fec.py  hashing.py  identity.py  metadata.py  models.py  node_roles.py  security.py  storage.py  storage_api.py  storage_client.py  storage_node.py  transport.py
tests/: test_api.py  test_cli.py  test_compression.py  test_config_chunking_crypto.py  test_controller.py  test_discovery.py  test_fault_injection.py  test_fec.py  test_storage_api.py  test_storage_metadata.py
(+38 files in other folders)
